# CMakeList.txt : CMake project for Project 4, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "project4_Robertson_bar0065.cpp" "Project 4.h")

# TODO: Add tests and install targets if needed.
