# CMakeList.txt : CMake project for Project 5, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "Project 5.cpp" "Project 5.h")

# TODO: Add tests and install targets if needed.
